[package]
name = "rust_exploring_versioned_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obake = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
